tests/NormalTests/paczka1/fuzzy1/72619422.err
Error in line 4: PWsKzsHqOOe A582 61,1
Error in line 24: A567 A582 79,5
Error in line 35: qKanv A582 92,1
Error in line 33: PWsKzsHqOOe A582 6,0
